--- a/blog-dashboard/src/app/categories/categories.component.html
+++ b/blog-dashboard/src/app/categories/categories.component.html
@@ -1,1 +1,24 @@
-<p>categories works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12 bg-theme-secondary p-5 shadow-effect">
+            <h3 class="text-center text-primary-theme"> New Categories</h3>
+            <p class="text-center mb-5"> Add a new category</p>
+
+            <form class="form-row text-center" #categoryForm = 'ngForm' (ngSubmit)="onSubmit(categoryForm)">
+
+                <div class="row g-3">
+
+                    <div class="form-group col-md-10">
+                        <input type="text" name="category" class="form-control shadow-effect" placeholder="Add New Categories" ngModel>
+                    </div>
+
+                    <div class="col-md-2">
+                        <button class="btn btn-block btn-info btn-sub mb-2">Add Category</button>
+                    </div>
+
+                </div>
+            </form>
+
+        </div>
+    </div>
+</div>
