--- a/blog-dashboard/src/app/categories/categories.component.html
+++ b/blog-dashboard/src/app/categories/categories.component.html
@@ -4,16 +4,21 @@
             <h3 class="text-center text-primary-theme"> New Categories</h3>
             <p class="text-center mb-5"> Add a new category</p>
 
-            <form class="form-row text-center" #categoryForm = 'ngForm' (ngSubmit)="onSubmit(categoryForm)">
+            <form class="form-row text-center" #categoryForm='ngForm' (ngSubmit)="onSubmit(categoryForm)">
 
                 <div class="row g-3">
 
                     <div class="form-group col-md-10">
-                        <input type="text" name="category" class="form-control shadow-effect" placeholder="Add New Categories" ngModel>
+                        <input type="text" name="category" class="form-control shadow-effect"
+                            placeholder="Add New Categories" #newCategory='ngModel' ngModel required
+                            [ngClass]="{'is.invalid':newCategory.invalid && newCategory.touched}">
+                        <div class="alert alert-danger " *ngIf="newCategory.invalid && newCategory.touched">
+                            Category field is required
+                        </div>
                     </div>
 
                     <div class="col-md-2">
-                        <button class="btn btn-block btn-info btn-sub mb-2">Add Category</button>
+                        <button class="btn btn-block btn-info btn-sub mb-2" [disabled]="categoryForm.invalid">Add Category</button>
                     </div>
 
                 </div>
