--- a/blog-dashboard/src/styles.css
+++ b/blog-dashboard/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+/* @import "~ngx-toatsr/toastr"; */
 
 :root {
   --primary-color: #026467;
