--- a/blog-dashboard/src/app/categories/categories.component.html
+++ b/blog-dashboard/src/app/categories/categories.component.html
@@ -46,7 +46,7 @@
                                 <td>{{i+1}}</td>
                                 <td>{{category.data.category }}</td>
                                 <td>
-                                    <button class="btn btn-sm btn-warning" (click)="onEdit(category.data.category)">Edit</button>
+                                    <button class="btn btn-sm btn-warning" (click)="onEdit(category.data.category, category.id)">Edit</button>
                                     <button class="btn btn-sm btn-danger ">Delete</button>
                                 </td>
                                 
