--- a/blog-dashboard/src/app/categories/categories.component.html
+++ b/blog-dashboard/src/app/categories/categories.component.html
@@ -46,8 +46,8 @@
                                 <td>{{i+1}}</td>
                                 <td>{{category.data.category }}</td>
                                 <td>
-                                    <button class="btn btn-sm btn-warning" (click)="onEdit(category.data.category, category.id)">Edit</button>
-                                    <button class="btn btn-sm btn-danger ">Delete</button>
+                                    <button class="btn btn-sm btn-warning " (click)="onEdit(category.data.category, category.id)">Edit</button>
+                                    <button class="btn btn-sm btn-danger delete " (click)="onDelete(category.id)">Delete</button>
                                 </td>
                                 
                             </tr>
