--- a/blog-dashboard/src/app/dashboard/dashboard.component.html
+++ b/blog-dashboard/src/app/dashboard/dashboard.component.html
@@ -10,5 +10,15 @@
                 </div>
             </div>
         </div>
+        <div class="col-md-4 mb-5 ">
+            <div class="card shadow-effect" routerLink="posts">
+                <div class="card-body text-center bg-theme-secondary">
+                    <h2 class="text-primary-theme">
+                        Posts
+                    </h2>
+                    <p>Manage your posts here</p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
