--- a/blog-dashboard/src/app/posts/new-post/new-post.component.html
+++ b/blog-dashboard/src/app/posts/new-post/new-post.component.html
@@ -11,11 +11,12 @@
                         <div class="card-body">
                             <div class="form-group">
                                 <label for=""> Title</label>
-                                <input type="text" class="form-control">
+                                <input type="text" class="form-control" (keyup)="onTitleChange($event)">
                             </div>
                             <div class="form-group">
                                 <label for=""> Permalink</label>
-                                <input type="text" class="form-control">
+                                <input type="text" class="form-control" [(ngModel)]="permalink" name="permalink"
+                                    disabled="">
                             </div>
                             <div class="form-group">
                                 <label for=""> Excerpt</label>
@@ -32,9 +33,10 @@
                             <option value="" disabled> Please select category</option>
                         </select>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group mt-3">
                         <label for=""> Post Image</label>
-                        <input type="file" class="form-control">
+                        <img [src]="imageSrc" alt="Post image preview" class="form-control img-preview img-fluid">
+                        <input type="file" class="form-control" accept="image/* " (change)="onImageChange($event)" >
                     </div>
                 </div>
 
@@ -54,8 +56,8 @@
             </div>
 
             <div class="col-md-12 text-center mb-5">
-                 <button class="btn btn-info"> Save Post</button>
-                 <button class="btn btn-warning m-3" routerLink="/posts"> Back to post</button>
+                <button class="btn btn-info"> Save Post</button>
+                <button class="btn btn-warning m-3" routerLink="/posts"> Back to post</button>
 
             </div>
 
