--- a/blog-dashboard/src/app/categories/categories.component.html
+++ b/blog-dashboard/src/app/categories/categories.component.html
@@ -28,7 +28,7 @@
         </div>
     </div>
 
-    <div class="row mt-5 mb-5 g-6">
+    <div class="row mt-5 mb-5 g-6 bg-theme-secondary">
         <div class="col-md-3"></div>
         <div class="col-md-6 ">
             <div class="card shadow-effect">
