--- a/blog-dashboard/src/app/posts/new-post/new-post.component.html
+++ b/blog-dashboard/src/app/posts/new-post/new-post.component.html
@@ -2,10 +2,10 @@
     <div class="row">
         <div class="col-md-12">
             <h3 class="text-center">Add New New post</h3>
-            <p class="mb-2"> You Can Add a new Post Here </p>
+            <p class="mb-2 text-center"> You Can Add a new Post Here </p>
         </div>
         <form>
-            <div class="row">
+            <div class="row mt-5">
                 <div class="col-md-7">
                     <div class="card shadow-effect">
                         <div class="card-body">
@@ -26,17 +26,18 @@
                     </div>
                 </div>
 
-                <div class="col-md-5">
+                <div class="card p-3 col-md-5">
                     <div class="form-group">
                         <Label class=""> Please select post category</Label>
                         <select class="form-control">
                             <option value="" disabled> Please select category</option>
+                            <option *ngFor="let category of categories"> {{category.data.category}}</option>
                         </select>
                     </div>
                     <div class="form-group mt-3">
                         <label for=""> Post Image</label>
                         <img [src]="imageSrc" alt="Post image preview" class="form-control img-preview img-fluid">
-                        <input type="file" class="form-control" accept="image/* " (change)="onImageChange($event)" >
+                        <input type="file" class="form-control" accept="image/* " (change)="onImageChange($event)">
                     </div>
                 </div>
 
@@ -48,7 +49,7 @@
                         <div class="card-body">
                             <div class="form-group">
                                 <label for=""> Content</label>
-                                <textarea cols="30" rows="10" class="form-control"></textarea>
+                                <angular-editor placeholder="Add Your Content Here"> </angular-editor>
                             </div>
                         </div>
                     </div>
