--- a/blog-dashboard/src/app/posts/new-post/new-post.component.html
+++ b/blog-dashboard/src/app/posts/new-post/new-post.component.html
@@ -4,23 +4,23 @@
             <h3 class="text-center">Add New New post</h3>
             <p class="mb-2 text-center"> You Can Add a new Post Here </p>
         </div>
-        <form>
+        <form [formGroup]="postForm">
             <div class="row mt-5">
                 <div class="col-md-7">
                     <div class="card shadow-effect">
                         <div class="card-body">
                             <div class="form-group">
                                 <label for=""> Title</label>
-                                <input type="text" class="form-control" (keyup)="onTitleChange($event)">
+                                <input type="text" class="form-control" (keyup)="onTitleChange($event)" formControlName="title">
                             </div>
                             <div class="form-group">
                                 <label for=""> Permalink</label>
                                 <input type="text" class="form-control" [(ngModel)]="permalink" name="permalink"
-                                    disabled="">
+                                     formControlName="permalink">
                             </div>
                             <div class="form-group">
                                 <label for=""> Excerpt</label>
-                                <textarea cols="30" rows="10" class="form-control "></textarea>
+                                <textarea cols="30" rows="10" class="form-control " formControlName="excerpt"></textarea>
                             </div>
                         </div>
                     </div>
@@ -29,7 +29,7 @@
                 <div class="card p-3 col-md-5">
                     <div class="form-group">
                         <Label class=""> Please select post category</Label>
-                        <select class="form-control">
+                        <select class="form-control" formControlName="category">
                             <option value="" disabled> Please select category</option>
                             <option *ngFor="let category of categories"> {{category.data.category}}</option>
                         </select>
@@ -37,7 +37,7 @@
                     <div class="form-group mt-3">
                         <label for=""> Post Image</label>
                         <img [src]="imageSrc" alt="Post image preview" class="form-control img-preview img-fluid">
-                        <input type="file" class="form-control" accept="image/* " (change)="onImageChange($event)">
+                        <input type="file" class="form-control" accept="image/* " (change)="onImageChange($event)" formControlName="postImg">
                     </div>
                 </div>
 
@@ -47,9 +47,9 @@
                 <div class="col-md-12">
                     <div class="card shadow-effect">
                         <div class="card-body">
-                            <div class="form-group">
+                            <div class="form-group" >
                                 <label for=""> Content</label>
-                                <angular-editor placeholder="Add Your Content Here"> </angular-editor>
+                                <angular-editor placeholder="Add Your Content Here" formControlName="content"> </angular-editor>
                             </div>
                         </div>
                     </div>
