--- a/blog-dashboard/src/app/posts/new-post/new-post.component.html
+++ b/blog-dashboard/src/app/posts/new-post/new-post.component.html
@@ -10,17 +10,38 @@
                     <div class="card shadow-effect">
                         <div class="card-body">
                             <div class="form-group">
-                                <label for=""> Title</label>
-                                <input type="text" class="form-control" (keyup)="onTitleChange($event)" formControlName="title">
+                                <label for=""> Title </label>
+                                <input 
+                                type="text" 
+                                class="form-control" 
+                                (keyup)="onTitleChange($event)" 
+                                formControlName="title"
+                                [ngClass]="{'is-invalid': fc['title'].touched && fc['title'].invalid }"
+                                >
+                                <div *ngIf="fc['title'].hasError('required')">
+                                    <div class="alert alert-danger" *ngIf="fc['title'].touched && fc['title'].invalid"> Title is required </div>
+                                </div>
+                                <div *ngIf="fc['title'].hasError('minlength')">
+                                    <div class="alert alert-danger" *ngIf="fc['title'].touched && fc['title'].invalid"> Title must be at least 10 characters long  </div>
+                                </div>
                             </div>
                             <div class="form-group">
                                 <label for=""> Permalink</label>
                                 <input type="text" class="form-control" [(ngModel)]="permalink" name="permalink"
                                      formControlName="permalink">
+                                     <div *ngIf="fc['permalink'].hasError('required')">
+                                        <div class="alert alert-danger" *ngIf="fc['permalink'].touched && fc['permalink'].invalid"> Permalink is required </div>
+                                    </div>
                             </div>
                             <div class="form-group">
                                 <label for=""> Excerpt</label>
                                 <textarea cols="30" rows="10" class="form-control " formControlName="excerpt"></textarea>
+                                <div *ngIf="fc['excerpt'].hasError('required')">
+                                    <div class="alert alert-danger" *ngIf="fc['excerpt'].touched && fc['excerpt'].invalid"> Excerpt is required </div>
+                                </div>
+                                <div *ngIf="fc['title'].hasError('minlength')">
+                                    <div class="alert alert-danger" *ngIf="fc['excerpt'].touched && fc['excerpt'].invalid"> Excerpt must be at least 50 characters long  </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -33,11 +54,17 @@
                             <option value="" disabled> Please select category</option>
                             <option *ngFor="let category of categories"> {{category.data.category}}</option>
                         </select>
+                        <div *ngIf="fc['category'].hasError('required')">
+                            <div class="alert alert-danger" *ngIf="fc['category'].touched && fc['category'].invalid"> Please select a category </div>
+                        </div>
                     </div>
                     <div class="form-group mt-3">
                         <label for=""> Post Image</label>
                         <img [src]="imageSrc" alt="Post image preview" class="form-control img-preview img-fluid">
                         <input type="file" class="form-control" accept="image/* " (change)="onImageChange($event)" formControlName="postImg">
+                        <div *ngIf="fc['postImg'].hasError('required')">
+                            <div class="alert alert-danger" *ngIf="fc['postImg'].touched && fc['postImg'].invalid"> Please upload an image for post </div>
+                        </div>
                     </div>
                 </div>
 
@@ -50,6 +77,9 @@
                             <div class="form-group" >
                                 <label for=""> Content</label>
                                 <angular-editor placeholder="Add Your Content Here" formControlName="content"> </angular-editor>
+                                <div *ngIf="fc['content'].hasError('required')">
+                                    <div class="alert alert-danger" *ngIf="fc['content'].touched && fc['content'].invalid"> Content is required </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -57,7 +87,7 @@
             </div>
 
             <div class="col-md-12 text-center mb-5">
-                <button class="btn btn-info"> Save Post</button>
+                <button class="btn btn-info" [disabled]="postForm.invalid"> Save Post</button>
                 <button class="btn btn-warning m-3" routerLink="/posts"> Back to post</button>
 
             </div>
