--- a/blog-dashboard/src/app/posts/new-post/new-post.component.html
+++ b/blog-dashboard/src/app/posts/new-post/new-post.component.html
@@ -4,7 +4,7 @@
             <h3 class="text-center">Add New New post</h3>
             <p class="mb-2 text-center"> You Can Add a new Post Here </p>
         </div>
-        <form [formGroup]="postForm">
+        <form [formGroup]="postForm" (ngSubmit)="onSubmit()">
             <div class="row mt-5">
                 <div class="col-md-7">
                     <div class="card shadow-effect">
