--- a/blog-dashboard/src/app/posts/all-posts/all-posts.component.html
+++ b/blog-dashboard/src/app/posts/all-posts/all-posts.component.html
@@ -12,4 +12,38 @@
              </div>
         </div>
     </div>
+
+    <div class="row mt-3">
+        <div class="col-md-12">
+            <div class="card shadow-effect">
+                 <div class="card-body">
+                    <table class="table row-border hover">
+                        <thead>
+                            <tr>
+                                <th>No</th>
+                                <th>Post Image</th>
+                                <th>Title</th>
+                                <th>Excerpt</th>
+                                <th>Category</th>
+                                <th>Date</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let post of postArray, let i  = index;">
+                                <td>{{i+1}}</td>
+                                <td width="10"><img src="{{post.data.postImgPath}}" class="img img-fluid"></td>
+                                <td width="200">{{post.data.title | titlecase}}</td>
+                                <td width="300">{{post.data.excerpt}}</td>
+                                <td>{{post.data.category.category}}</td>
+                                <td>{{post.data.createdAt.toMillis() | date}}</td>
+                                <td>{{post.action}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                 </div> 
+            </div>
+        </div>
+    </div>
+
 </div>
