--- a/blog-dashboard/src/app/posts/all-posts/all-posts.component.html
+++ b/blog-dashboard/src/app/posts/all-posts/all-posts.component.html
@@ -1,22 +1,22 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-             <div class="card shadow-effect">
+            <div class="card shadow-effect">
                 <div class="card-body text-center">
                     <h3 class="text-theme-center"> All Blog Posts</h3>
-                    <p>From here you can manage your blog  posts</p>
+                    <p>From here you can manage your blog posts</p>
                     <button class="btn btn-info bg-theme" routerLink="/posts/new"> Add New Post </button>
                     <button class="btn btn-warning m-2" routerLink=""> Back To Dashboard </button>
 
                 </div>
-             </div>
+            </div>
         </div>
     </div>
 
     <div class="row mt-3">
         <div class="col-md-12">
             <div class="card shadow-effect">
-                 <div class="card-body">
+                <div class="card-body">
                     <table class="table row-border hover">
                         <thead>
                             <tr>
@@ -32,16 +32,18 @@
                         <tbody>
                             <tr *ngFor="let post of postArray, let i  = index;">
                                 <td>{{i+1}}</td>
-                                <td width="10"><img src="{{post.data.postImgPath}}" class="img img-fluid"></td>
+                                <td width="200"><img src="{{post.data.postImgPath}}" class="img img-fluid"></td>
                                 <td width="200">{{post.data.title | titlecase}}</td>
-                                <td width="300">{{post.data.excerpt}}</td>
+                                <td width="200">{{post.data.excerpt}}</td>
                                 <td>{{post.data.category.category}}</td>
                                 <td>{{post.data.createdAt.toMillis() | date}}</td>
-                                <td>{{post.action}}</td>
+                                <td>
+                                    <button class="btn btn-sm btn-warning" routerLink="/posts/new" [queryParams]="{id: post.id}">Edit</button>
+                                </td>
                             </tr>
                         </tbody>
                     </table>
-                 </div> 
+                </div>
             </div>
         </div>
     </div>
